--- a/app/templates/_update_password_modal.html
+++ b/app/templates/_update_password_modal.html
@@ -7,12 +7,12 @@
             </div>
             <div class="modal-body">
                 <form method="POST" action="{{ url_for('profile.update_user_password', user_id=user.id) }}" id="updatePasswordForm{{ user.id }}" class="needs-validation" novalidate>
-                    {{ form.hidden_tag() }}
+                    {{ update_password_form.hidden_tag() }}  <!-- Include CSRF token -->
 
                     <!-- Current Password -->
                     <div class="mb-3">
-                        {{ form.current_password.label }}
-                        {{ form.current_password(class="form-control", required=True, id="current_password{{ user.id }}") }}
+                        {{ update_password_form.current_password.label }}
+                        {{ update_password_form.current_password(class="form-control", required=True, id="current_password{{ user.id }}") }}
                         <div class="invalid-feedback">
                             Please enter your current password.
                         </div>
@@ -20,10 +20,10 @@
 
                     <!-- New Password -->
                     <div class="mb-3">
-                        {{ form.password.label }}
-                        {{ form.password(class="form-control", required=True, id="password{{ user.id }}") }}
+                        {{ update_password_form.password.label }}
+                        {{ update_password_form.password(class="form-control", required=True, id="password{{ user.id }}") }}
                         <div class="invalid-feedback">
-                            {% for validator in form.password.validators %}
+                            {% for validator in update_password_form.password.validators %}
                                 {% if validator.__class__.__name__ == 'Length' %}
                                     Please enter a new password (minimum {{ validator.min }} characters).
                                 {% endif %}
@@ -33,8 +33,8 @@
 
                     <!-- Confirm New Password -->
                     <div class="mb-3">
-                        {{ form.confirm_password.label }}
-                        {{ form.confirm_password(class="form-control", required=True, id="confirm_password{{ user.id }}") }}
+                        {{ update_password_form.confirm_password.label }}
+                        {{ update_password_form.confirm_password(class="form-control", required=True, id="confirm_password{{ user.id }}") }}
                         <div class="invalid-feedback">
                             The passwords do not match.
                         </div>
