--- a/app/templates/activity.html
+++ b/app/templates/activity.html
@@ -141,6 +141,9 @@
                                         </div>
                                         <button type="submit" class="btn btn-primary">Save</button>
                                     </form>
+                                    <div class="mt-3">
+                                        <a href="{{ url_for('coffee_shop.add_coffee_shop') }}" class="text-primary">Coffee shop not listed? Add one here</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
